Bug 126614 - crash upon mouse wheel scrolling when no document is opened
Summary: crash upon mouse wheel scrolling when no document is opened
Status: RESOLVED FIXED
Alias: None
Product: kpdf
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.5
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Albert Astals Cid
URL:
Keywords:
: 142456 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-05-02 14:29 UTC by Jirka
Modified: 2007-03-03 14:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jirka 2006-05-02 14:29:46 UTC
Version:           0.5 (using KDE 3.5.0, compiled sources)
Compiler:          gcc version 3.3.6
OS:                Linux (i686) release 2.6.16.1

The application crashes immediately when scrolling with the mouse wheel inside the (empty) document window. Happens always when kpdf is started without pdf loaded.

backtrace:
(no debugging symbols found)
Using host libthread_db library "/lib/tls/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1231632704 (LWP 13178)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#3  0xb67f739d in KPDFDocument::currentPage ()
   from /opt/kde/lib/kde3/libkpdfpart.so
#4  0xb719452e in QWidget::event () from /usr/lib/qt/lib/libqt-mt.so.3
#5  0xb710184f in QApplication::internalNotify ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#6  0xb7101191 in QApplication::notify () from /usr/lib/qt/lib/libqt-mt.so.3
#7  0xb7748725 in KApplication::notify () from /opt/kde/lib/libkdecore.so.4
#8  0xb7097bd8 in QETWidget::translateWheelEvent ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#9  0xb7097717 in QETWidget::translateMouseEvent ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#10 0xb7094ffe in QApplication::x11ProcessEvent ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#11 0xb70abed4 in QEventLoop::processEvents ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#12 0xb7113ba8 in QEventLoop::enterLoop () from /usr/lib/qt/lib/libqt-mt.so.3
#13 0xb7113a58 in QEventLoop::exec () from /usr/lib/qt/lib/libqt-mt.so.3
#14 0xb7101aa1 in QApplication::exec () from /usr/lib/qt/lib/libqt-mt.so.3
#15 0x0804f17e in ?? ()
#16 0xbfd96710 in ?? ()
#17 0x00000001 in ?? ()
#18 0x00000001 in ?? ()
#19 0x00000000 in ?? ()
#20 0x08050dd5 in _IO_stdin_used ()
#21 0x00000001 in ?? ()
#22 0x08050e00 in _IO_stdin_used ()
#23 0x00000000 in ?? ()
#24 0x00000000 in ?? ()
#25 0x08050cc0 in _IO_stdin_used ()
#26 0xb7f9967c in ?? ()
#27 0x00000000 in ?? ()
#28 0xbfd96774 in ?? ()
#29 0xb7f8a598 in _dl_lookup_symbol_x () from /lib/ld-linux.so.2
#30 0xb69d9fcb in __libc_start_main () from /lib/tls/libc.so.6
#31 0x0804ee81 in ?? ()
Comment 1 Albert Astals Cid 2006-05-02 20:13:36 UTC
can not reproduce
Comment 2 Albert Astals Cid 2006-09-26 11:06:52 UTC
can you try in a newer KDE version like 3.5.4?
Comment 3 Jirka 2006-09-26 17:22:49 UTC
I've just tried it in KDE 3.5.4, with the same result.

(no debugging symbols found)
Using host libthread_db library "/lib/tls/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1231026496 (LWP 16652)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#5  0xb680a4fc in KPDFDocument::currentPage ()
   from /opt/kde/lib/kde3/libkpdfpart.so
#6  0xb68265e3 in PageView::wheelEvent ()
   from /opt/kde/lib/kde3/libkpdfpart.so
#7  0xb71a778e in QWidget::event () from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#8  0xb7118c9d in QApplication::internalNotify ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#9  0xb71185b8 in QApplication::notify ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#10 0xb7736c8b in KApplication::notify () from /opt/kde/lib/libkdecore.so.4
#11 0xb70b0fa1 in QETWidget::translateWheelEvent ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#12 0xb70b0ae8 in QETWidget::translateMouseEvent ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#13 0xb70ae42a in QApplication::x11ProcessEvent ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#14 0xb70c4e5b in QEventLoop::processEvents ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#15 0xb712984b in QEventLoop::enterLoop ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#16 0xb71296f4 in QEventLoop::exec () from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#17 0xb7118ef0 in QApplication::exec ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#18 0x0804f07f in ?? ()
#19 0xbfedfbb0 in ?? ()
#20 0x00000001 in ?? ()
#21 0x00000001 in ?? ()
#22 0x00000000 in ?? ()
#23 0x08049010 in ?? ()
#24 0xbfedfbc0 in ?? ()
#25 0xb7fe4628 in ?? ()
#26 0x0805c530 in ?? ()
#27 0xb6a02040 in ?? ()
#28 0x00000001 in ?? ()
#29 0x00000000 in ?? ()
#30 0x00000001 in ?? ()
#31 0x0805b2d8 in ?? ()
#32 0xbfedfbc0 in ?? ()
#33 0x00000010 in ?? ()
#34 0x00000000 in ?? ()
#35 0x0805b2e0 in ?? ()
#36 0x08050af3 in typeinfo name for QGList ()
#37 0x03df6174 in ?? ()
#38 0xbfedfc30 in ?? ()
#39 0xb78e4c48 in vtable for KApplication () from /opt/kde/lib/libkdecore.so.4
#40 0x0804ce20 in ?? ()
#41 0x080e1750 in ?? ()
#42 0x00000000 in ?? ()
#43 0x080e0bf0 in ?? ()
#44 0x081410d8 in ?? ()
#45 0x0813fe08 in ?? ()
#46 0x08145bc8 in ?? ()
#47 0x00000000 in ?? ()
#48 0x00000000 in ?? ()
#49 0x00000001 in ?? ()
#50 0x0805c560 in ?? ()
#51 0x0804ce00 in ?? ()
#52 0x00000000 in ?? ()
#53 0x08145b98 in ?? ()
#54 0x08102d28 in ?? ()
#55 0x080fd6d0 in ?? ()
#56 0xb7579500 in ?? () from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#57 0xb78e4cc4 in vtable for KApplication () from /opt/kde/lib/libkdecore.so.4
#58 0x080f0b70 in ?? ()
#59 0x080f26f8 in ?? ()
#60 0x080f0a88 in ?? ()
#61 0xb75904d0 in vtable for QCString ()
   from /usr/lib/qt-3.3.6/lib/libqt-mt.so.3
#62 0x080f0920 in ?? ()
#63 0xbfedfc80 in ?? ()
#64 0x080f0a00 in ?? ()
#65 0x0805e210 in ?? ()
#66 0x0000012c in ?? ()
#67 0x000001ff in ?? ()
#68 0x0805234c in ?? ()
#69 0x00000000 in ?? ()
#70 0x080f0af8 in ?? ()
#71 0xb6a61e01 in ?? () from /lib/tls/libc.so.6
#72 0x0813de78 in ?? ()
#73 0x080f0758 in ?? ()
#74 0xb6a84ae6 in __new_exitfn () from /lib/tls/libc.so.6
#75 0xb6a6efcb in __libc_start_main () from /lib/tls/libc.so.6
#76 0x0804ee31 in ?? ()
Comment 4 Albert Astals Cid 2006-09-26 17:36:49 UTC
really really really puzzling. Can you try compiling with --enable-debug=full and repost the backtrace? Are you using that may be "non-standard" ?
Comment 5 Jirka 2006-09-27 12:21:31 UTC
I use the 3.5.4 version of KDE compiled for Slackware 10.2 by Ken Zalewski, see http://www.linuxpackages.net/pkg_details.php?id=9319
I don't compile it from sources.

> ------- Additional Comments From tsdgeos terra es  2006-09-26 17:36 -------
> really really really puzzling. Can you try compiling with --enable-debug=full
> and repost the backtrace? Are you using that may be "non-standard" ?

Comment 6 Albert Astals Cid 2006-09-27 12:37:43 UTC
then please ask him to give you debug enabled packages or to debug the problem himself at is imposible to reproduce it here.
Comment 7 Pino Toscano 2006-10-26 22:39:25 UTC
The bug is fully reproducible when the Continuous mode is disabled.
I'll commit a fix in a moment...
Comment 8 Pino Toscano 2006-10-26 22:51:27 UTC
SVN commit 599376 by pino:

Don't try querying the document if it's closed.

BUG: 126614


 M  +6 -0      pageview.cpp  


--- branches/KDE/3.5/kdegraphics/kpdf/ui/pageview.cpp #599375:599376
@@ -1161,6 +1161,12 @@
     if ( d->viewportMoveActive )
         return;
 
+    if ( !d->document->isOpened() )
+    {
+        QScrollView::wheelEvent( e );
+        return;
+    }
+
     int delta = e->delta(),
         vScroll = verticalScrollBar()->value();
     e->accept();
Comment 9 Pino Toscano 2007-03-03 14:27:31 UTC
*** Bug 142456 has been marked as a duplicate of this bug. ***