Don't try querying the document if it's closed.

BUG: 126614

svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=599376